Fixed footer0 and added vertical scrollbar to homepage dropdown

--- a/public/styles/partials/footer0.css
+++ b/public/styles/partials/footer0.css
@@ -12,6 +12,10 @@ footer {
     overflow: -moz-scrollbars-none;
     -ms-overflow-style: none;
 	font-size: 0.75em;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 footer::-webkit-scrollbar {
@@ -35,14 +39,14 @@ footer p {
 #description {
     font-family: 'Kalam', cursive;
     font-size: 100%;
-		padding: 0.8vh 0;
 }
 
 #copyright {
     font-family: 'Arapey', serif;
     background-color: #249;
-    margin: 0% 37.5%;
 		font-size: 75%;
+		box-sizing: content-box;
+		padding: 0.2vh 0.6vh;
     border-radius: 100px;
 }
 
